# Point-Sale-System-Web

./: README.md
Django/: pyproject.toml
Django/backend/app/: forms.py  models.py  serializers.py  urls.py  views.py
Django/backend/app/migrations/: 0001_initial.py  0002_auto_20240410_1544.py  0003_tableinventory.py  0003_tablestocks_datetime.py  0004_remove_tablestocks_datetime.py
Django/backend/app/static/css/: dashboard.css  style.css
Django/backend/app/static/js/: computeTotalSales.js  currency.js  dashboard.js  index.js  pressKeys.js
Django/backend/app/templates/app/: add-product-page.html  add-user-page.html  addingProduct.html  base.html  dashboard.html  editUser.html  product-page.html  transaction.html  usersCreation.html
Django/backend/backend/: settings.py
Vuejs/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Vuejs/src/: App.vue  Flow.txt  This-is-Flowchart.txt  main.js
Vuejs/src/assets/: main.css
Vuejs/src/components/: Cashier.vue  Login.vue  Main.vue  Navbar.vue  Product.vue  Rightside.vue  Sidebar.vue
Vuejs/src/router/: index.js
Vuejs/src/store/: index.js
Vuejs/src/views/: Home.vue  NotFound.vue
